bertytech/assets/css/style.scss
/* ... */
.md-image.contain {
  position: relative;
  min-height: 500px;
}
.md-image.contain amp-img img {
  object-fit: contain;
}

.highlight > pre {
  padding: 30px;

  @media (max-width:768px){
    padding: 15px;
  }
}

// Compare table
$table-first-column-width: 190px;
$table-first-column-width-mobile: 115px;
.compare-table {
  overflow-x: auto;
  border-left: 1px solid #dee2e6;
  border-right: 1px solid #dee2e6;
  margin-left: $table-first-column-width;
  @media (max-width: 600px) {
    margin-left: $table-first-column-width-mobile;
  }
  .compare-table-inner {
    margin: 0;
  }
  tbody {
    th,td {
      height: 70px;
    }
  }
  thead th:first-child,
  tbody th {
    font-size: 90%;
    vertical-align: middle;
    position: absolute;
    width: $table-first-column-width;
    background: #fff;
    height: 70px;
    display: flex;
    align-items: center;
    border-bottom-width: 0;
    margin-left: -$table-first-column-width;
    @media (max-width: 600px) {
      width: $table-first-column-width-mobile;
      margin-left: -$table-first-column-width-mobile;
    }
    &:last-child {
      border-bottom-width: 1px;
    }
  }
  tbody tr:last-child th {
    border-bottom-width: 1px;
  }
  thead th {
    text-align: center;
    &:first-child {
      min-width: $table-first-column-width;
      height: auto;
      @media (max-width: 600px) {
        min-width: $table-first-column-width-mobile;
      }
    }
  }
  .compare-value {
    text-align: center;
    vertical-align: middle;
    &.value-true {
      color: green;
    }
    &.value-false {
      color: red;
    }
    &.value-partially {
      color: orange;
    }
    i {
      font-size: 24px;
    }
  }
}

